--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "sonoma_sites",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "pinia": "^3.0.1",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.3",
-    "vite": "^6.2.4",
-    "vite-plugin-vue-devtools": "^7.7.2"
-  }
+    "name": "sonoma_sites",
+    "version": "0.0.0",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "dotenv": "^16.5.0",
+        "pinia": "^3.0.1",
+        "vue": "^3.5.13",
+        "vue-router": "^4.5.0"
+    },
+    "devDependencies": {
+        "@tailwindcss/vite": "^4.1.7",
+        "@vitejs/plugin-vue": "^5.2.4",
+        "tailwindcss": "^4.1.7",
+        "vite": "^6.2.4",
+        "vite-plugin-vue-devtools": "^7.7.2"
+    }
 }
